css: no fixed header on mobile
Also factor out mobile and print styles so that they can overwrite the
normal styles more easily.

--- a/fava/static/css/base.css
+++ b/fava/static/css/base.css
@@ -380,7 +380,6 @@ aside {
 
 article {
   height: 100%;
-  min-width: 560px;
   padding: 1.5em;
   position: relative;
   width: 100%;
@@ -545,85 +544,4 @@ td .status-indicator {
   float: right;
   margin-left: 3px;
   margin-top: 3px;
-}
-
-/*
- * At resolutions smaller than 768px, hide the aside menu.
- * This means that ipads and larger will show the side menu.
- */
-@media (max-width: 767px) {
-  body {
-    padding: var(--header-height 0 0);
-  }
-
-  aside {
-    margin-left: -var(--aside-width);
-
-    &.active {
-      margin-left: 0;
-
-      & .add-transaction-button {
-        left: var(--aside-width);
-      }
-    }
-  }
-
-  .aside-button,
-  .add-transaction-button {
-    border-color: var(--color-sidebar-border);
-    border-style: solid;
-    border-width: 0 1px 1px 0;
-    height: 42px;
-    left: 0;
-    padding: 6px 4px;
-    position: fixed;
-    width: 42px;
-  }
-
-  .aside-button {
-    display: block;
-    margin-left: 0;
-    top: var(--header-height);
-
-    &.active {
-      background-color: var(--color-sidebar-background);
-      box-shadow: none;
-      left: var(--aside-width);
-    }
-  }
-
-  .add-transaction-button {
-    color: var(--color-mobile-button-text);
-    font-size: 30px;
-    top: calc(var(--header-height) + 42px);
-  }
-
-  .source-form,
-  .source-editor-wrapper {
-    left: 0;
-  }
-}
-
-@media print {
-  body {
-    padding: 0;
-  }
-
-  header {
-    position: relative;
-
-    & > * {
-      display: none;
-    }
-
-    & h1 {
-      display: block;
-    }
-  }
-
-  aside,
-  .aside-button,
-  .toggle-chart-container {
-    display: none;
-  }
 }
